--- a/20160401003-CoreAnimation-CATransition/Base.lproj/Main.storyboard
+++ b/20160401003-CoreAnimation-CATransition/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +16,36 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SHe-bt-DUA">
+                                <rect key="frame" x="140" y="60" width="320" height="480"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N2b-aN-JiU">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="N2b-aN-JiU" firstAttribute="width" secondItem="SHe-bt-DUA" secondAttribute="width" id="4JI-9c-Z6X"/>
+                                    <constraint firstAttribute="height" constant="480" id="4QG-L2-pUA"/>
+                                    <constraint firstAttribute="width" constant="320" id="B7r-Yb-aeg"/>
+                                    <constraint firstItem="N2b-aN-JiU" firstAttribute="top" secondItem="SHe-bt-DUA" secondAttribute="top" id="Dd5-aU-3yB"/>
+                                    <constraint firstItem="N2b-aN-JiU" firstAttribute="height" secondItem="SHe-bt-DUA" secondAttribute="height" id="aYd-0h-lms"/>
+                                    <constraint firstAttribute="trailing" secondItem="N2b-aN-JiU" secondAttribute="trailing" id="fs9-Eq-19G"/>
+                                    <constraint firstAttribute="bottom" secondItem="N2b-aN-JiU" secondAttribute="bottom" id="iyp-Sp-QOo"/>
+                                    <constraint firstItem="N2b-aN-JiU" firstAttribute="leading" secondItem="SHe-bt-DUA" secondAttribute="leading" id="nRP-lK-XSn"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SHe-bt-DUA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m1r-kG-5Fm"/>
+                            <constraint firstItem="SHe-bt-DUA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zQv-zT-XrB"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="N2b-aN-JiU" id="2yH-qV-ULX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
